--- a/${project.build.directory}/classes/pom.xml
+++ b/${project.build.directory}/classes/pom.xml
@@ -14,9 +14,10 @@
 	<name>spring-rest-mvc</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
-		<maven.compiler.source>19</maven.compiler.source>
-		<maven.compiler.target>19</maven.compiler.target>
+		<java.version>17</java.version><properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 	</properties>
 	<dependencies>
