--- a/src/main/resources/application-localpostgresql.properties
+++ b/src/main/resources/application-localpostgresql.properties
@@ -4,7 +4,8 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/restdb?useUnicode=true&ch
 spring.jpa.database=POSTGRESQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.baseline-on-migrate=true 
 
 spring.datasource.hikari.pool-name=RestDB-Pool
 spring.datasource.hikari.maximum-pool-size=5
