--- a/src/main/resources/application-localpostgresql.properties
+++ b/src/main/resources/application-localpostgresql.properties
@@ -5,7 +5,9 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
+
 spring.flyway.baseline-on-migrate=true 
+spring.flyway.enabled=false
 
 spring.datasource.hikari.pool-name=RestDB-Pool
 spring.datasource.hikari.maximum-pool-size=5
